force-app/main/default/objects/Voo__c/fields/Chegada__c.field-meta.xml
<CustomField>
    <fullName>Chegada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chegada</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Chegadas</relationshipLabel>
    <relationshipName>Chegadas</relationshipName>
    <type>Lookup</type>
</CustomField>