force-app/main/default/objects/Voo__c/fields/Partida__c.field-meta.xml
<CustomField>
    <fullName>Partida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partida</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Partidas</relationshipLabel>
    <relationshipName>Partidas</relationshipName>
    <type>Lookup</type>
</CustomField>