force-app/main/default/objects/Voo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Partida__c</columns>
    <columns>Chegada__c</columns>
    <columns>Distancia__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>